--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@ footer .social a {
       <p>Svieži a chrumkavý, plný vitality.</p>
     </div>
     <div class="microgreen-card" data-modal="petrzlen-modal">
-      <img src="petrzlen.jpg" alt="Petržlen">
+      <img src="petrzlen.jpg" alt="???">
       <h3>???</h3>
       <p>:).</p>
     </div>
     <div class="microgreen-card" data-modal="chili-modal">
-      <img src="chili.jpg" alt="Čili">
+      <img src="chili.jpg" alt="???">
       <h3>???</h3>
       <p>:)</p>
     </div>
