--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@ footer .social a {
       <p>Svieži a chrumkavý, plný vitality.</p>
     </div>
     <div class="microgreen-card" data-modal="petrzlen-modal">
-      <img src="petrzlen.jpg" alt="???">
-      <h3>???</h3>
+      <img src="petrzlen.jpg" alt="Chystáme novú mikrozeleninku">
+      <h3>Už čoskoro</h3>
       <p>:).</p>
     </div>
-    <div class="microgreen-card" data-modal="chili-modal">
+    <div class="microgreen-card" data-modal="Chystáme novú mikrozeleninku">
       <img src="chili.jpg" alt="???">
-      <h3>???</h3>
+      <h3>Už čoskoro</h3>
       <p>:)</p>
     </div>
   </div>
@@ -409,16 +409,16 @@ footer .social a {
 <div id="petrzlen-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">×</span>
-    <h3>Benefity Petržlenu</h3>
-    <p>Petržlen podporuje trávenie a je bohatý na vitamíny, ideálny na osvieženie pokrmov.</p>
+    <h3>Benefity </h3>
+    <p>Už čoskoro.</p>
   </div>
 </div>
 
 <div id="chili-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">×</span>
-    <h3>Benefity Čili</h3>
-    <p>Čili dodáva pikantnosť a podporuje metabolizmus, vhodné pre tých, ktorí majú radi ostré chute.</p>
+    <h3>Benefity</h3>
+    <p>Už čoskoro.</p>
   </div>
 </div>
 
