--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@ footer .social a {
       <h3>Šalát</h3>
       <p>Svieži a chrumkavý, plný vitality.</p>
     </div>
-    <div class="microgreen-card" data-modal="petrzlen-modal">
-      <img src="petrzlen.jpg" alt="Chystáme novú mikrozeleninku">
+    <div class="microgreen-card" data-modal="???-modal">
+      <img src="otaznik.jpg" alt="Chystáme novú mikrozeleninku">
       <h3>Už čoskoro</h3>
       <p>:).</p>
     </div>
-    <div class="microgreen-card" data-modal="Chystáme novú mikrozeleninku">
-      <img src="chili.jpg" alt="???">
+    <div class="microgreen-card" data-modal="???-modal">
+      <img src="otaznik.jpg" alt="Chystáme novú mikrozeleninku">
       <h3>Už čoskoro</h3>
       <p>:)</p>
     </div>
