--- a/index.html
+++ b/index.html
@@ -346,7 +346,58 @@ footer .social a {
   <div class="modal-content">
     <span class="close-btn">×</span>
     <h3>Benefity Hrášku</h3>
-    <p>Hrášok je bohatý na vitamín K, ktorý podporuje zdravie kostí. Obsahuje aj antioxidanty, ktoré chránia bunky a posilňujú imunitu.</p>
+    <pre>Hráškové microgreens sú nielen chutné, ale aj extrémne výživné. Obsahujú množstvo vitamínov, minerálov a ďalších prospešných látok, ktoré podporujú zdravie a vitalitu.
+
+🔬 Výživové hodnoty na 100 g hráškových microgreens:
+
+✅ Kalórie: 35 kcal
+✅ Bielkoviny: 3,5 g
+✅ Sacharidy: 6 g
+✅ Vláknina: 3 g
+✅ Tuky: 0,5 g
+
+🟢 Vitamíny v hráškových microgreens
+
+🌞 Vitamín A (beta-karotén) – podporuje zdravie očí, pokožky a imunitný systém. 👀
+🦸‍♂️ Vitamín C – silný antioxidant, posilňuje imunitu a podporuje tvorbu kolagénu. 🛡️
+🔋 Vitamín B1 (tiamín) – dôležitý pre energetický metabolizmus a správne fungovanie nervov.
+🧠 Vitamín B2 (riboflavín) – pomáha premieňať potravu na energiu a chráni bunky pred oxidačným stresom.
+⚡ Vitamín B3 (niacín) – podporuje mozog, nervovú sústavu a zdravie kože.
+🛠️ Vitamín B5 (kyselina pantoténová) – nevyhnutný pre syntézu hormónov a metabolizmus tukov.
+🌱 Vitamín B6 – dôležitý pre tvorbu červených krviniek a zdravie mozgu.
+🩸 Vitamín B9 (kyselina listová) – kľúčový pre tvorbu DNA a prevenciu anémie.
+🦴 Vitamín K – nevyhnutný pre zdravé kosti a správnu zrážanlivosť krvi.
+
+🔵 Minerály v hráškových microgreens
+
+💪 Vápnik (Ca) – podporuje pevnosť kostí a zubov. 🦴
+⚡ Horčík (Mg) – nevyhnutný pre svaly, nervy a zdravé srdce.
+💖 Draslík (K) – reguluje krvný tlak a podporuje funkciu svalov.
+🩸 Železo (Fe) – pomáha pri tvorbe červených krviniek a prevencii anémie.
+🛡️ Zinok (Zn) – posilňuje imunitný systém a urýchľuje hojenie rán.
+🧠 Mangán (Mn) – podporuje mozgové funkcie a metabolizmus živín.
+🔩 Meď (Cu) – dôležitá pre tvorbu červených krviniek a zdravie nervov.
+🦷 Fosfor (P) – nevyhnutný pre silné kosti a energiu buniek.
+
+🟠 Ďalšie prospešné látky
+
+🔬 Chlorofyl – podporuje detoxikáciu organizmu a zlepšuje okysličenie krvi.
+🧪 Antioxidanty (polyfenoly, flavonoidy) – chránia bunky pred poškodením a spomaľujú starnutie.
+💚 Aminokyseliny – základné stavebné kamene bielkovín pre regeneráciu a rast svalov.
+🌾 Luteín a zeaxantín – chránia oči pred UV žiarením a znižujú riziko makulárnej degenerácie.
+
+💡 Prečo zaradiť hráškové microgreens do stravy?
+
+✅ Podporujú imunitu – vďaka vitamínu C a zinku.
+✅ Zlepšujú trávenie – vysoký obsah vlákniny podporuje zdravie čriev.
+✅ Pomáhajú pri chudnutí – nízkokalorické, ale výživné! 🥗
+✅ Podporujú zdravé srdce – draslík a antioxidanty chránia cievy. ❤️
+✅ Znižujú stres a únavu – horčík a vitamíny B pomáhajú nervovému systému.
+✅ Podporujú zdravé kosti – vitamín K, vápnik a fosfor chránia pred osteoporózou.
+
+👉 Tip: Hráškové microgreens sú skvelé do šalátov, smoothies, polievok, sendvičov alebo ako príloha k hlavnému jedlu! 🍽️
+
+Uži si silu prírody v jednej hrsti! 🌱💚</pre>
   </div>
 </div>
 
