--- a/index.html
+++ b/index.html
@@ -396,31 +396,176 @@ Uži si silu prírody v jednej hrsti! 🌱💚</pre>
   <div class="modal-content">
     <span class="close-btn">×</span>
     <h3>Benefity Brokolice</h3>
-    <p>Brokolica obsahuje sulforafán s protizápalovými účinkami. Podporuje zdravie srdca a je bohatá na vitamíny.</p>
+    <pre>Reďkovkové microgreens nie sú len chutné a jemne pikantné, ale aj plné živín, ktoré podporujú zdravie a vitalitu. Obsahujú množstvo vitamínov, minerálov a antioxidantov, ktoré prospievajú telu na viacerých úrovniach.
+      
+🔬 Výživové hodnoty na 100 g reďkovkových microgreens:
+
+✅ Kalórie: 40 kcal
+✅ Bielkoviny: 3,8 g
+✅ Sacharidy: 6,5 g
+✅ Vláknina: 4 g
+✅ Tuky: 0,6 g
+
+🟢 Vitamíny v reďkovkových microgreens
+
+🌞 Vitamín A (beta-karotén) – chráni oči a podporuje zdravú pokožku. 👁️✨
+🦸‍♂️ Vitamín C – silný antioxidant, ktorý posilňuje imunitu a urýchľuje hojenie rán. 🛡️
+🧠 Vitamín B1 (tiamín) – dôležitý pre správnu funkciu nervov a metabolizmus energie.
+🔋 Vitamín B2 (riboflavín) – podporuje tvorbu červených krviniek a zdravie buniek.
+⚡ Vitamín B3 (niacín) – pomáha pri detoxikácii a udržiava zdravú pokožku.
+🛠️ Vitamín B5 (kyselina pantoténová) – nevyhnutný pre tvorbu hormónov a zdravý metabolizmus.
+💡 Vitamín B6 – dôležitý pre mozgové funkcie a reguláciu nálady.
+🩸 Vitamín B9 (kyselina listová) – podporuje tvorbu DNA a krvotvorbu.
+🦴 Vitamín K – podporuje pevné kosti a zdravú zrážanlivosť krvi.
+
+🔵 Minerály v reďkovkových microgreens
+
+💪 Vápnik (Ca) – podporuje silné kosti a zuby. 🦷
+⚡ Horčík (Mg) – dôležitý pre svaly, nervový systém a zdravé srdce.
+💖 Draslík (K) – pomáha regulovať krvný tlak a podporuje hydratáciu buniek.
+🩸 Železo (Fe) – dôležité pre tvorbu červených krviniek a okysličenie tela.
+🛡️ Zinok (Zn) – posilňuje imunitný systém a podporuje regeneráciu buniek.
+🧠 Mangán (Mn) – nevyhnutný pre metabolizmus a zdravie mozgu.
+🔩 Meď (Cu) – pomáha pri tvorbe kolagénu a zdraví ciev.
+🦷 Fosfor (P) – podporuje energetický metabolizmus a silné kosti.
+
+🟠 Ďalšie prospešné látky
+
+🔬 Chlorofyl – pomáha detoxikovať organizmus a zlepšuje okysličenie buniek.
+🧪 Antioxidanty (glukozinoláty, flavonoidy) – chránia bunky pred poškodením a znižujú riziko rakoviny.
+💚 Sulforafan – silná protizápalová látka, ktorá podporuje detox pečene a zdravie pľúc.
+🌾 Luteín a zeaxantín – chránia oči pred škodlivým UV žiarením.
+
+💡 Prečo zaradiť reďkovkové microgreens do stravy?
+
+✅ Podporujú trávenie – vďaka vysokému obsahu vlákniny pomáhajú pri pravidelnom vyprázdňovaní. 🚀
+✅ Posilňujú imunitný systém – obsahujú silné antioxidanty a vitamín C. 🛡️
+✅ Detoxikujú organizmus – pomáhajú pečeni zbaviť sa toxínov. 🧼
+✅ Podporujú zdravé kosti – bohaté na vápnik, horčík a vitamín K. 🦴
+✅ Podporujú zdravie srdca – draslík reguluje krvný tlak a podporuje zdravý krvný obeh. ❤️
+✅ Pomáhajú pri chudnutí – nízkokalorické, no veľmi výživné, zasýtia na dlhší čas. 🥗
+✅ Podporujú zdravú pokožku a vlasy – vitamíny A, C a zinok pomáhajú pri tvorbe kolagénu. ✨
+
+👉 Tip: Pridaj reďkovkové microgreens do šalátov, sendvičov, polievok alebo ich skombinuj s avokádom a citrónom na zdravú nátierku! 🥑🍋
+
+Malé, ale silné – reďkovkové microgreens ti dajú energiu a zdravie na každý deň! 🌱💚
+</pre>
   </div>
 </div>
 
-<div id="bazalka-modal" class="modal">
+<div id="brokolica-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">×</span>
-    <h3>Benefity Bazalky</h3>
-    <p>Bazalka je bohatá na antioxidanty a dodáva energiu každému pokrmu.</p>
+    <h3>Benefity Brokolica</h3>
+    <pre>rokolicové microgreens patria medzi najzdravšie zelené potraviny na svete. Obsahujú extrémne vysoké množstvo sulforafanu, ktorý má silné protizápalové a detoxikačné účinky. Navyše sú nabité vitamínmi, minerálmi a antioxidantmi.
+
+🔬 Výživové hodnoty na 100 g brokolicových microgreens:
+
+✅ Kalórie: 35 kcal
+✅ Bielkoviny: 3,5 g
+✅ Sacharidy: 5,8 g
+✅ Vláknina: 4 g
+✅ Tuky: 0,4 g
+
+🟢 Vitamíny v brokolicových microgreens
+
+🌞 Vitamín A (beta-karotén) – podporuje zdravie očí a pokožky. 👀
+🦸‍♂️ Vitamín C – silný antioxidant, podporuje imunitu a zdravie ciev. 🛡️
+🧠 Vitamín B1 (tiamín) – dôležitý pre nervový systém a metabolizmus cukrov.
+🔋 Vitamín B2 (riboflavín) – podporuje energiu a zdravé bunky.
+⚡ Vitamín B3 (niacín) – pomáha pri detoxikácii a udržiava zdravú pokožku.
+🛠️ Vitamín B5 (kyselina pantoténová) – podporuje metabolizmus tukov a sacharidov.
+💡 Vitamín B6 – zlepšuje mozgové funkcie a náladu.
+🩸 Vitamín B9 (kyselina listová) – podporuje tvorbu DNA a krvotvorbu.
+🦴 Vitamín K – nevyhnutný pre zdravé kosti a správnu zrážanlivosť krvi.
+
+🔵 Minerály v brokolicových microgreens
+
+💪 Vápnik (Ca) – podporuje pevnosť kostí a zdravie zubov. 🦷
+⚡ Horčík (Mg) – nevyhnutný pre svaly a nervový systém.
+💖 Draslík (K) – reguluje krvný tlak a podporuje hydratáciu buniek.
+🩸 Železo (Fe) – dôležité pre tvorbu červených krviniek.
+🛡️ Zinok (Zn) – posilňuje imunitný systém a regeneráciu buniek.
+🧠 Mangán (Mn) – podporuje metabolizmus a mozgové funkcie.
+🔩 Meď (Cu) – pomáha pri tvorbe kolagénu a zdraví ciev.
+🦷 Fosfor (P) – podporuje silné kosti a zuby.
+
+🟠 Ďalšie prospešné látky
+
+🔬 Sulforafan – silný antioxidant, ktorý detoxikuje telo a podporuje zdravie pečene.
+🧪 Chlorofyl – podporuje okysličenie krvi a detoxikáciu.
+💚 Luteín a zeaxantín – chránia oči pred UV žiarením.
+
+💡 Prečo zaradiť brokolicové microgreens do stravy?
+
+✅ Podporujú detoxikáciu – pomáhajú telu zbaviť sa toxínov.
+✅ Posilňujú imunitný systém – vysoký obsah vitamínu C a antioxidantov.
+✅ Zlepšujú trávenie – vláknina podporuje zdravie čriev.
+✅ Podporujú zdravé srdce – draslík a sulforafan chránia cievy.
+✅ Pomáhajú pri chudnutí – nízkokalorické, ale veľmi výživné.
+✅ Znižujú zápaly – antioxidanty chránia bunky pred poškodením.
+
+👉 Tip: Brokolicové microgreens sa skvele hodia do smoothies, šalátov, sendvičov a polievok. 🍽️</pre>
   </div>
 </div>
 
-<div id="meta-modal" class="modal">
+<div id="kalerab-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">×</span>
-    <h3>Benefity Mäty</h3>
-    <p>Mäta podporuje trávenie a osviežuje dych, ideálna do nápojov aj jedál.</p>
+    <h3>Benefity Kaleráb</h3>
+    <pre>Kalerábové microgreens majú jemne sladkastú chuť, sú plné vitamínov a minerálov a podporujú imunitu, trávenie a zdravé srdce.
+
+🔬 Výživové hodnoty na 100 g kalerábových microgreens:
+
+✅ Kalórie: 30 kcal
+✅ Bielkoviny: 3,2 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,3 g
+
+🟢 Vitamíny a minerály v kalerábových microgreens
+
+🌞 Vitamín A, C, K, B-komplex – podporujú zdravie očí, metabolizmus a regeneráciu buniek.
+💪 Vápnik, draslík, železo – posilňujú kosti, krvný obeh a nervovú sústavu.
+
+💡 Prečo zaradiť kalerábové microgreens do stravy?
+
+✅ Podporujú trávenie – vláknina pomáha črevnej mikroflóre.
+✅ Zlepšujú krvný obeh – železo a draslík podporujú zdravé cievy.
+✅ Majú protizápalové účinky – vďaka antioxidantom chránia bunky.
+
+👉 Tip: Skvelé do šalátov a sendvičov! 🥗</pre>
   </div>
 </div>
 
-<div id="koriander-modal" class="modal">
+<div id="horcica-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">×</span>
-    <h3>Benefity Koriandru</h3>
-    <p>Koriander má detoxikačné účinky a podporuje imunitu, vďaka čomu je skvelým doplnkom jedál.</p>
+    <h3>Benefity Horčice</h3>
+    <pre>Horčičné microgreens majú pikantnú, ostrú chuť, sú bohaté na antioxidanty a podporujú trávenie a imunitu.
+
+
+🔬 Výživové hodnoty na 100 g horčičných microgreens:
+
+✅ Kalórie: 37 kcal
+✅ Bielkoviny: 3,7 g
+✅ Sacharidy: 6 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,5 g
+
+
+🟢 Vitamíny a minerály v horčičných microgreens
+
+🌞 Vitamín A, C, K – podporujú zdravie kože, očí a kostí.
+💖 Draslík, vápnik, železo – podporujú krvný obeh a pevnosť kostí.
+
+💡 Prečo zaradiť horčičné microgreens do stravy?
+
+✅ Podporujú trávenie – enzýmy podporujú produkciu žalúdočných štiav.
+✅ Zlepšujú krvný tlak – draslík udržiava rovnováhu tekutín v tele.
+✅ Znižujú zápaly – antioxidanty chránia telo pred oxidačným stresom.
+
+👉 Tip: Výborné do ázijských jedál a pikantných šalátov! 🥗🔥</pre>
   </div>
 </div>
 
@@ -428,7 +573,29 @@ Uži si silu prírody v jednej hrsti! 🌱💚</pre>
   <div class="modal-content">
     <span class="close-btn">×</span>
     <h3>Benefity Rukoly</h3>
-    <p>Rukola je zdrojom vitamínov a minerálov, čo ju robí ideálnou pre zdravé šaláty.</p>
+    <pre>Rukolové microgreens majú jemne korenistú, orieškovú chuť, podporujú zdravie kostí, srdca a trávenie.
+
+🔬 Výživové hodnoty na 100 g rukolových microgreens:
+
+✅ Kalórie: 32 kcal
+✅ Bielkoviny: 3,5 g
+✅ Sacharidy: 5,8 g
+✅ Vláknina: 3 g
+✅ Tuky: 0,4 g
+
+
+🟢 Vitamíny a minerály v rukolových microgreens
+
+🦸‍♂️ Vitamín C, K, A – podporujú imunitu a zdravie kože.
+💖 Vápnik, draslík, horčík – pomáhajú srdcu a svalom.
+
+💡 Prečo zaradiť rukolové microgreens do stravy?
+
+✅ Podporujú zdravé trávenie – vláknina podporuje zdravie čriev.
+✅ Znižujú krvný tlak – draslík reguluje cievy.
+✅ Majú protizápalové účinky – antioxidanty chránia bunky.
+
+👉 Tip: Skvelé do talianskych jedál a šalátov! 🍕</pre>
   </div>
 </div>
 
