--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@ section h2 {
   transform: translateY(-10px);
 }
 
+/* Upravené pravidlo pre obrázky, aby boli všetky rovnaké (vzorkou je Pea.jpg) */
 .microgreen-card img {
   width: 100%;
+  height: 200px;         /* pevná výška */
+  object-fit: cover;     /* zachová pomer a oreže pre rovnakú veľkosť */
   border-radius: 10px;
 }
 
@@ -421,66 +424,6 @@ Uži si silu prírody v jednej hrsti! 🌱💚</pre>
 🧠 Mangán (Mn) – nevyhnutný pre metabolizmus a zdravie mozgu.
 🔩 Meď (Cu) – pomáha pri tvorbe kolagénu a zdraví ciev.
 🦷 Fosfor (P) – podporuje energetický metabolizmus a silné kosti
-🟠 Ďalšie prospešné látky
-
-🔬 Chlorofyl – pomáha detoxikovať organizmus a zlepšuje okysličenie buniek.
-🧪 Antioxidanty (glukozinoláty, flavonoidy) – chránia bunky pred poškodením a znižujú riziko rakoviny.
-💚 Sulforafan – silná protizápalová látka, ktorá podporuje detox pečene a zdravie pľúc.
-🌾 Luteín a zeaxantín – chránia oči pred škodlivým UV žiarením.
-
-💡 Prečo zaradiť reďkovkové microgreens do stravy?
-
-✅ Podporujú trávenie – vďaka vysokému obsahu vlákniny pomáhajú pri pravidelnom vyprázdňovaní. 🚀
-✅ Posilňujú imunitný systém – obsahujú silné antioxidanty a vitamín C. 🛡️
-✅ Detoxikujú organizmus – pomáhajú pečeni zbaviť sa toxínov. 🧼
-✅ Podporujú zdravé kosti – bohaté na vápnik, horčík a vitamín K. 🦴
-✅ Podporujú zdravie srdca – draslík reguluje krvný tlak a podporuje zdravý krvný obeh. ❤️
-✅ Pomáhajú pri chudnutí – nízkokalorické, no veľmi výživné, zasýtia na dlhší čas. 🥗
-✅ Podporujú zdravú pokožku a vlasy – vitamíny A, C a zinok pomáhajú pri tvorbe kolagénu. ✨
-
-👉 Tip: Pridaj reďkovkové microgreens do šalátov, sendvičov, polievok alebo ich skombinuj s avokádom a citrónom na zdravú nátierku! 🥑🍋
-
-Malé, ale silné – reďkovkové microgreens ti dajú energiu a zdravie na každý deň! 🌱💚</pre>
-  </div>
-</div>
-
-<div id="brokolica-modal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn">×</span>
-    <h3>Benefity Brokolice</h3>
-    <pre>Reďkovkové microgreens nie sú len chutné a jemne pikantné, ale aj plné živín, ktoré podporujú zdravie a vitalitu. Obsahujú množstvo vitamínov, minerálov a antioxidantov, ktoré prospievajú telu na viacerých úrovniach.
-      
-🔬 Výživové hodnoty na 100 g reďkovkových microgreens:
-
-✅ Kalórie: 40 kcal
-✅ Bielkoviny: 3,8 g
-✅ Sacharidy: 6,5 g
-✅ Vláknina: 4 g
-✅ Tuky: 0,6 g
-
-🟢 Vitamíny v reďkovkových microgreens
-
-🌞 Vitamín A (beta-karotén) – chráni oči a podporuje zdravú pokožku. 👁️✨
-🦸‍♂️ Vitamín C – silný antioxidant, ktorý posilňuje imunitu a urýchľuje hojenie rán. 🛡️
-🧠 Vitamín B1 (tiamín) – dôležitý pre správnu funkciu nervov a metabolizmus energie.
-🔋 Vitamín B2 (riboflavín) – podporuje tvorbu červených krviniek a zdravie buniek.
-⚡ Vitamín B3 (niacín) – pomáha pri detoxikácii a udržiava zdravú pokožku.
-🛠️ Vitamín B5 (kyselina pantoténová) – nevyhnutný pre tvorbu hormónov a zdravý metabolizmus.
-💡 Vitamín B6 – dôležitý pre mozgové funkcie a reguláciu nálady.
-🩸 Vitamín B9 (kyselina listová) – podporuje tvorbu DNA a krvotvorbu.
-🦴 Vitamín K – podporuje pevné kosti a zdravú zrážanlivosť krvi.
-
-🔵 Minerály v reďkovkových microgreens
-
-💪 Vápnik (Ca) – podporuje silné kosti a zuby. 🦷
-⚡ Horčík (Mg) – dôležitý pre svaly, nervový systém a zdravé srdce.
-💖 Draslík (K) – pomáha regulovať krvný tlak a podporuje hydratáciu buniek.
-🩸 Železo (Fe) – dôležité pre tvorbu červených krviniek a okysličenie tela.
-🛡️ Zinok (Zn) – posilňuje imunitný systém a podporuje regeneráciu buniek.
-🧠 Mangán (Mn) – nevyhnutný pre metabolizmus a zdravie mozgu.
-🔩 Meď (Cu) – pomáha pri tvorbe kolagénu a zdraví ciev.
-🦷 Fosfor (P) – podporuje energetický metabolizmus a silné kosti.
-
 🟠 Ďalšie prospešné látky
 
 🔬 Chlorofyl – pomáha detoxikovať organizmus a zlepšuje okysličenie buniek.
@@ -804,4 +747,3 @@ modals.forEach(modal => {
 </script>
 </body>
 </html>
-
