--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ object-fit: cover;
 <div style="flex: 1; min-width: 280px; text-align: left;">
 <p><strong>Cena:</strong> 4 € za kus microgreens – bez ohľadu na druh.</p>
 <p>Microgreens dodávame "netrhané",to znamená, že sú stále zasadené v 100% organickom / vegánskom kokosovom substráte, aby si zachovali maximálnu čerstvosť, chuť a vôňu.</p>
-<p>Dopravu zabezpečujem osobne v rámci Trnavy a blízkeho okolia. Microgreens Vám doručíme priamo k Vám domov ! Dodávky realizujeme iba raz za 8 dní (kvalita je u nás prvoradá).Preto je vhodné si objednávať naše Micorgreens v predstihu.</p>
+<p>Dopravu zabezpečujeme osobne v rámci Trnavy a blízkeho okolia => DOPRAVA ZDARMA. Microgreens Vám doručíme priamo k Vám domov ! Dodávky realizujeme iba raz za 8 dní (kvalita je u nás prvoradá).Preto je vhodné si objednávať naše Micorgreens v predstihu.</p>
 </div>
 <!-- Obrázková časť -->
 <div style="flex: 1; min-width: 280px; text-align: right;">
