--- a/index.html
+++ b/index.html
@@ -343,9 +343,23 @@ object-fit: cover;
 <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 2rem; justify-content: center;">
 <!-- Textová časť -->
 <div style="flex: 1; min-width: 280px; text-align: left;">
-<p><strong>Cena:</strong> 4 € za kus microgreens – bez ohľadu na druh.</p>
-<p>Microgreens dodávame "netrhané",to znamená, že sú stále zasadené v 100% organickom / vegánskom kokosovom substráte, aby si zachovali maximálnu čerstvosť, chuť a vôňu.</p>
-<p>Dopravu zabezpečujeme osobne v rámci Trnavy a blízkeho okolia => DOPRAVA ZDARMA. Microgreens Vám doručíme priamo k Vám domov ! Dodávky realizujeme iba raz za 8 dní (kvalita je u nás prvoradá).Preto je vhodné si objednávať naše Micorgreens v predstihu.</p>
+<p><strong>Cena:</strong> 4 € za jeden kus microgreens – bez rozdielu druhu 🌱
+
+Naše microgreens dodávame <strong>“netrhané”</strong> – stále zasadené <strong>v 100% organickom vegánskom kokosovom substráte</strong> 🥥. Takto si udržia <strong>maximálnu čerstvosť, skvelú chuť aj vôňu!</strong>
+
+<strong>Doprava? Žiadny problém!</strong> 🚗
+Osobne doručíme v rámci <strong>Trnavy a blízkeho okolia – úplne ZDARMA</strong> 🏡
+Microgreens vám prinesieme <strong>až domov</strong> – rýchlo, čerstvo a s úsmevom!
+
+<strong>Dodávame raz za 8 dní ⏳</strong> – kvalita je u nás na prvom mieste ⭐
+<strong>Odporúčame objednať si vopred, aby ste si svoje zelené dobroty určite stihli uchmatnúť!
+
+<strong>Zdravie na tanieri – jednoducho a s láskou ❤️🥗</strong>
+
+<strong>Napíš nám správu a dohodneme sa! ✍️</strong>
+
+<strong>Malé rastlinky, veľká sila!</strong>
+</p>
 </div>
 <!-- Obrázková časť -->
 <div style="flex: 1; min-width: 280px; text-align: right;">
