--- a/index.html
+++ b/index.html
@@ -343,22 +343,22 @@ object-fit: cover;
 <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 2rem; justify-content: center;">
 <!-- Textová časť -->
 <div style="flex: 1; min-width: 280px; text-align: left;">
-<p><strong>Cena:</strong> 4 € za jeden kus microgreens – bez rozdielu druhu 🌱
+<p><strong>Cena:</strong> 4 € za jeden kus microgreens – bez rozdielu druhu 🌱</p>
 
-Naše microgreens dodávame <strong>“netrhané”</strong> – stále zasadené <strong>v 100% organickom vegánskom kokosovom substráte</strong> 🥥. Takto si udržia <strong>maximálnu čerstvosť, skvelú chuť aj vôňu!</strong>
+<p>Naše microgreens dodávame <strong>“netrhané”</strong> – stále zasadené <strong>v 100% organickom vegánskom kokosovom substráte</strong> 🥥. Takto si udržia <strong>maximálnu čerstvosť, skvelú chuť aj vôňu!</strong></p>
 
-<strong>Doprava? Žiadny problém!</strong> 🚗
+<p><strong>Doprava? Žiadny problém!</strong> 🚗
 Osobne doručíme v rámci <strong>Trnavy a blízkeho okolia – úplne ZDARMA</strong> 🏡
-Microgreens vám prinesieme <strong>až domov</strong> – rýchlo, čerstvo a s úsmevom!
+Microgreens vám prinesieme <strong>až domov</strong> – rýchlo, čerstvo a s úsmevom!</p>
 
-<strong>Dodávame raz za 8 dní ⏳</strong> – kvalita je u nás na prvom mieste ⭐
-<strong>Odporúčame objednať si vopred, aby ste si svoje zelené dobroty určite stihli uchmatnúť!
+<p><strong>Dodávame raz za 8 dní ⏳</strong> – kvalita je u nás na prvom mieste ⭐
+<strong>Odporúčame objednať si vopred, aby ste si svoje zelené dobroty určite stihli uchmatnúť!</p>
 
-<strong>Zdravie na tanieri – jednoducho a s láskou ❤️🥗</strong>
+<p><strong>Zdravie na tanieri – jednoducho a s láskou ❤️🥗</strong></p>
 
-<strong>Napíš nám správu a dohodneme sa! ✍️</strong>
+<p><strong>Napíš nám správu a dohodneme sa! ✍️</strong></p>
 
-<strong>Malé rastlinky, veľká sila!</strong>
+<p><strong>Malé rastlinky, veľká sila!</strong></p>
 </p>
 </div>
 <!-- Obrázková časť -->
