--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@ object-fit: cover;
 <ul>
 <li><a href="#domov">Domov</a></li>
 <li><a href="#produkty">Produkty</a></li>
+<li><a href="#cena-doprava">Cena a doprava</a></li>
 <li><a href="#o-nas">O nás</a></li>
 <li><a href="#kontakt">Kontakt</a></li>
 </ul>
@@ -342,7 +343,7 @@ object-fit: cover;
 <h2>Cena a doprava</h2>
 <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 2rem; justify-content: center;">
 <!-- Textová časť -->
-<div style="flex: 1; min-width: 280px; text-align: left;">
+<div style="flex: 1; min-width: 280px; text-align: center; line-height: 1.6;">
 <p><strong>Cena:</strong> 4 € za jeden kus microgreens – bez rozdielu druhu 🌱</p>
 
 <p>Naše microgreens dodávame <strong>“netrhané”</strong> – stále zasadené <strong>v 100% organickom vegánskom kokosovom substráte</strong> 🥥. Takto si udržia <strong>maximálnu čerstvosť, skvelú chuť aj vôňu!</strong></p>
