--- a/index.html
+++ b/index.html
@@ -373,59 +373,67 @@ Microgreens vám prinesieme <strong>až domov</strong> – rýchlo, čerstvo a s
 <div id="Hrášok-modal" class="modal">
 <div class="modal-content">
 <span class="close-btn">×</span>
-<h3>Benefity Hrášku</h3>
-<pre>Hráškové microgreens sú nielen chutné, ale aj extrémne výživné. Obsahujú množstvo vitamínov, minerálov a ďalších prospešných látok, ktoré podporujú zdravie a vitalitu.
+<h3>Benefity Hrášku (Pea, Foxy)</h3>
+<pre>Hráškové microgreens sú chutné a výživné, bohaté na vitamíny, minerály a ďalšie živiny vhodné ako súčasť vyváženej stravy. 🌱
 
-🔬 Výživové hodnoty na 100 g hráškových microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 35 kcal
 ✅ Bielkoviny: 3,5 g
 ✅ Sacharidy: 6 g
 ✅ Vláknina: 3 g
 ✅ Tuky: 0,5 g
 
-🟢 Vitamíny v hráškových microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🌞 Vitamín A (beta-karotén) – podporuje zdravie očí, pokožky a imunitný systém. 👀
-🦸‍♂️ Vitamín C – silný antioxidant, posilňuje imunitu a podporuje tvorbu kolagénu. 🛡️
-🔋 Vitamín B1 (tiamín) – dôležitý pre energetický metabolizmus a správne fungovanie nervov.
-🧠 Vitamín B2 (riboflavín) – pomáha premieňať potravu na energiu a chráni bunky pred oxidačným stresom.
-⚡ Vitamín B3 (niacín) – podporuje mozog, nervovú sústavu a zdravie kože.
-🛠️ Vitamín B5 (kyselina pantoténová) – nevyhnutný pre syntézu hormónov a metabolizmus tukov.
-🌱 Vitamín B6 – dôležitý pre tvorbu červených krviniek a zdravie mozgu.
-🩸 Vitamín B9 (kyselina listová) – kľúčový pre tvorbu DNA a prevenciu anémie.
-🦴 Vitamín K – nevyhnutný pre zdravé kosti a správnu zrážanlivosť krvi.
+🟢 Vitamíny v hráškových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• ⚡ Vitamín B1 – prispieva k normálnemu energetickému metabolizmu.
+• 🔋 Vitamín B2 – prispieva k ochrane buniek pred oxidačným stresom.
+• 🧠 Vitamín B3 – prispieva k normálnej činnosti nervového systému.
+• 🛠️ Vitamín B5 – prispieva k normálnemu metabolizmu hormónov.
+• 🌱 Vitamín B6 – prispieva k normálnej tvorbe červených krviniek.
+• 🩸 Vitamín B9 – prispieva k normálnej tvorbe krvi.
+• 🦴 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
 
-🔵 Minerály v hráškových microgreens
+🔵 Minerály v hráškových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• 🛡️ Zinok – prispieva k normálnej funkcii imunitného systému.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+• 🔩 Meď – prispieva k normálnej tvorbe červených krviniek.
+• 🦷 Fosfor – prispieva k udržaniu normálneho stavu kostí.
 
-💪 Vápnik (Ca) – podporuje pevnosť kostí a zubov. 🦴
-⚡ Horčík (Mg) – nevyhnutný pre svaly, nervy a zdravé srdce.
-💖 Draslík (K) – reguluje krvný tlak a podporuje funkciu svalov.
-🩸 Železo (Fe) – pomáha pri tvorbe červených krviniek a prevencii anémie.
-🛡️ Zinok (Zn) – posilňuje imunitný systém a urýchľuje hojenie rán.
-🧠 Mangán (Mn) – podporuje mozgové funkcie a metabolizmus živín.
-🔩 Meď (Cu) – dôležitá pre tvorbu červených krviniek a zdravie nervov.
-🦷 Fosfor (P) – nevyhnutný pre silné kosti a energiu buniek.
-
-🟠 Ďalšie prospešné látky
-
-🔬 Chlorofyl – podporuje detoxikáciu organizmu a zlepšuje okysličenie krvi.
-🧪 Antioxidanty (polyfenoly, flavonoidy) – chránia bunky pred poškodením a spomaľujú starnutie.
-💚 Aminokyseliny – základné stavebné kamene bielkovín pre regeneráciu a rast svalov.
-🌾 Luteín a zeaxantín – chránia oči pred UV žiarením a znižujú riziko makulárnej degenerácie.
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 💚 Aminokyseliny – sú súčasťou bielkovín.
+• 👁️ Luteín a zeaxantín – prispievajú k ochrane očí pred svetelným žiarením.
 
 💡 Prečo zaradiť hráškové microgreens do stravy?
+✅ Vitamín C a zinok – prispievajú k normálnej funkcii imunitného systému.
+🌾 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+🦴 Vitamín K, vápnik a fosfor – prispievajú k udržaniu normálneho stavu kostí.
 
-✅ Podporujú imunitu – vďaka vitamínu C a zinku.
-✅ Zlepšujú trávenie – vysoký obsah vlákniny podporuje zdravie čriev.
-✅ Pomáhajú pri chudnutí – nízkokalorické, ale výživné! 🥗
-✅ Podporujú zdravé srdce – draslík a antioxidanty chránia cievy. ❤️
-✅ Znižujú stres a únavu – horčík a vitamíny B pomáhajú nervovému systému.
-✅ Podporujú zdravé kosti – vitamín K, vápnik a fosfor chránia pred osteoporózou.
+👉 Tip: Hráškové microgreens sú vhodné do šalátov, smoothies, polievok alebo ako dekorácia. 🥗🍲
 
-👉 Tip: Hráškové microgreens sú skvelé do šalátov, smoothies, polievok, sendvičov alebo ako príloha k hlavnému jedlu! 🍽️
+⚠️ Alergény:
+Hrášok môže u citlivých osôb vyvolať alergickú reakciu.
 
-Uži si silu prírody v jednej hrsti! 🌱💚</pre>
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Uži si prírodnú výživovú silu v každej hrsti! 🌱💚</pre>
 </div>
 </div>
 
