--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ object-fit: cover;
 </div>
 <div class="microgreen-card" data-modal="redkovka-modal">
 <img src="redkovka.jpg" alt="Reďkovka">
-<h3>Reďkovka</h3>
+<h3>Reďkovka (Radish Pink)</h3>
 <p>Ostrá a svieža, plná živín.</p>
 </div>
 <div class="microgreen-card" data-modal="brokolica-modal">
@@ -440,60 +440,66 @@ Uži si prírodnú výživovú silu v každej hrsti! 🌱💚</pre>
 <div id="redkovka-modal" class="modal">
 <div class="modal-content">
 <span class="close-btn">×</span>
-<h3>Benefity Reďkovky</h3>
-<pre>Reďkovkové microgreens nie sú len chutné a jemne pikantné, ale aj plné živín, ktoré podporujú zdravie a vitalitu. Obsahujú množstvo vitamínov, minerálov a antioxidantov, ktoré prospievajú telu na viacerých úrovniach.
+<h3>Benefity Reďkovky (Radish Pink)</h3>
+<pre>Reďkovkové microgreens sú chutné a výživné, vhodné ako súčasť vyváženej stravy.
 
-🔬 Výživové hodnoty na 100 g reďkovkových microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 40 kcal
 ✅ Bielkoviny: 3,8 g
 ✅ Sacharidy: 6,5 g
 ✅ Vláknina: 4 g
 ✅ Tuky: 0,6 g
 
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🟢 Vitamíny v reďkovkových microgreens
+🟢 Vitamíny v reďkovkových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• ⚡ Vitamín B1 – prispieva k normálnemu energetickému metabolizmu.
+• 🔋 Vitamín B2 – prispieva k normálnej tvorbe červených krviniek.
+• 🧠 Vitamín B3 – prispieva k normálnej činnosti nervového systému.
+• 🛠️ Vitamín B5 – prispieva k normálnemu metabolizmu živín.
+• 💡 Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+• 🩸 Vitamín B9 – prispieva k normálnej tvorbe krvi.
+• 🦴 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
 
-🌞 Vitamín A (beta-karotén) – chráni oči a podporuje zdravú pokožku. 👁️✨
-🦸‍♂️ Vitamín C – silný antioxidant, ktorý posilňuje imunitu a urýchľuje hojenie rán. 🛡️
-🧠 Vitamín B1 (tiamín) – dôležitý pre správnu funkciu nervov a metabolizmus energie.
-🔋 Vitamín B2 (riboflavín) – podporuje tvorbu červených krviniek a zdravie buniek.
-⚡ Vitamín B3 (niacín) – pomáha pri detoxikácii a udržiava zdravú pokožku.
-🛠️ Vitamín B5 (kyselina pantoténová) – nevyhnutný pre tvorbu hormónov a zdravý metabolizmus.
-💡 Vitamín B6 – dôležitý pre mozgové funkcie a reguláciu nálady.
-🩸 Vitamín B9 (kyselina listová) – podporuje tvorbu DNA a krvotvorbu.
-🦴 Vitamín K – podporuje pevné kosti a zdravú zrážanlivosť krvi.
+🔵 Minerály v reďkovkových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• 🛡️ Zinok – prispieva k normálnej funkcii imunitného systému.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+• 🔩 Meď – prispieva k normálnej tvorbe červených krviniek.
+• 🦷 Fosfor – prispieva k udržaniu normálneho stavu kostí.
 
-🔵 Minerály v reďkovkových microgreens
-
-💪 Vápnik (Ca) – podporuje silné kosti a zuby. 🦷
-⚡ Horčík (Mg) – dôležitý pre svaly, nervový systém a zdravé srdce.
-💖 Draslík (K) – pomáha regulovať krvný tlak a podporuje hydratáciu buniek.
-🩸 Železo (Fe) – dôležité pre tvorbu červených krviniek a okysličenie tela.
-🛡️ Zinok (Zn) – posilňuje imunitný systém a podporuje regeneráciu buniek.
-🧠 Mangán (Mn) – nevyhnutný pre metabolizmus a zdravie mozgu.
-🔩 Meď (Cu) – pomáha pri tvorbe kolagénu a zdraví ciev.
-🦷 Fosfor (P) – podporuje energetický metabolizmus a silné kosti
-🟠 Ďalšie prospešné látky
-
-🔬 Chlorofyl – pomáha detoxikovať organizmus a zlepšuje okysličenie buniek.
-🧪 Antioxidanty (glukozinoláty, flavonoidy) – chránia bunky pred poškodením a znižujú riziko rakoviny.
-💚 Sulforafan – silná protizápalová látka, ktorá podporuje detox pečene a zdravie pľúc.
-🌾 Luteín a zeaxantín – chránia oči pred škodlivým UV žiarením.
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 👁️ Luteín a zeaxantín – prispievajú k ochrane očí pred svetelným žiarením.
 
 💡 Prečo zaradiť reďkovkové microgreens do stravy?
+✅ Vitamín C a zinok – prispievajú k normálnej funkcii imunitného systému.
+🌾 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+🦴 Vitamín K, vápnik a fosfor – prispievajú k udržaniu normálneho stavu kostí.
 
-✅ Podporujú trávenie – vďaka vysokému obsahu vlákniny pomáhajú pri pravidelnom vyprázdňovaní. 🚀
-✅ Posilňujú imunitný systém – obsahujú silné antioxidanty a vitamín C. 🛡️
-✅ Detoxikujú organizmus – pomáhajú pečeni zbaviť sa toxínov. 🧼
-✅ Podporujú zdravé kosti – bohaté na vápnik, horčík a vitamín K. 🦴
-✅ Podporujú zdravie srdca – draslík reguluje krvný tlak a podporuje zdravý krvný obeh. ❤️
-✅ Pomáhajú pri chudnutí – nízkokalorické, no veľmi výživné, zasýtia na dlhší čas. 🥗
-✅ Podporujú zdravú pokožku a vlasy – vitamíny A, C a zinok pomáhajú pri tvorbe kolagénu. ✨
+👉 Tip: Reďkovkové microgreens sú vhodné do šalátov, sendvičov, polievok alebo ako dekorácia. 🥗🍲
 
-👉 Tip: Pridaj reďkovkové microgreens do šalátov, sendvičov, polievok alebo ich skombinuj s avokádom a citrónom na zdravú nátierku! 🥑🍋
+⚠️ Alergény:
+Reďkovka patrí medzi brukvovité rastliny, ktoré môžu u citlivých osôb vyvolať alergickú reakciu.
 
-Malé, ale silné – reďkovkové microgreens ti dajú energiu a zdravie na každý deň! 🌱💚</pre>
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si prírodnú energiu v každej hrsti! 🌱💚</pre>
 </div>
 </div>
 
