--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ object-fit: cover;
 </div>
 <div class="microgreen-card" data-modal="redkovka-modal">
 <img src="redkovka.jpg" alt="Reďkovka">
-<h3>Reďkovka (Radish Pink)</h3>
+<h3>Reďkovka<br>Radish Pink</h3>
 <p>Ostrá a svieža, plná živín.</p>
 </div>
 <div class="microgreen-card" data-modal="brokolica-modal">
