--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ object-fit: cover;
 <!-- Prvý rad (5 produktov) -->
 <div class="microgreen-card" data-modal="Hrášok-modal">
 <img src="Pea.jpg" alt="Hrášok">
-<h3>Hrášok<br>Pea-Foxy</h3>
+<h3>Hrášok<br>Pea Foxy</h3>
 <p>Sladký a chrumkavý, plný sviežosti.</p>
 </div>
 <div class="microgreen-card" data-modal="redkovka-modal">
